# metaforge-tft

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  skills-lock.json
backend/: __init__.py  main.py
backend/engine/: __init__.py  augment_ranker.py  item_optimizer.py  phase_advisor.py  tier_engine.py
backend/ocr/: __init__.py  coords.py  screen_reader.py
backend/riot/: live_client.py  models.py
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  index.html  main.cjs  main.js
frontend/src/data/: gameData.js
insforge/functions/get-compositions/: index.ts
insforge/functions/health/: index.ts
insforge/functions/ingest-augments/: index.ts
insforge/functions/ingest-compositions/: index.ts
insforge/functions/ingest-items/: index.ts
scraper/: __init__.py  augments_scraper.py  comps_scraper.py  data_dragon.py  database.py  items_scraper.py  patch_watcher.py  scheduler.py  validator.py
shared/: __init__.py  insforge_client.py  logger.py  settings.py
shared/models/: __init__.py
tests/: __init__.py  conftest.py
tests/integration/: test_api.py
tests/unit/: test_insforge_client.py  test_tier_engine.py  test_validators.py
